--- a/thiluc/style/style.css
+++ b/thiluc/style/style.css
@@ -1,209 +1,196 @@
-html, body
-{
-	background-color: black;
-	height:100%;
-	width:100%;
-	overflow:hidden;
-	margin:0;
-	padding:0;
+html,
+body {
+    background-color: black;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
 }
 
-#console
-{
-	height:70px;
-	width:100%;
-	
-	overflow-x:auto;
-	overflow-y:hidden;
-	
-	background-image:url('console_bg.svg');
-	
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:10px;
-	bottom:0px;
-	position:absolute;
-	z-index:1;
-	
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+#console {
+    height: 70px;
+    width: 100%;
+
+    overflow-x: auto;
+    overflow-y: hidden;
+
+    background-image: url('console_bg.svg');
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+    bottom: 0px;
+    position: absolute;
+    z-index: 1;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
-#console h2
-{
-	color: black;
-	font-size: 1.1em;
+#console h2 {
+    color: black;
+    font-size: 1.1em;
 }
 
-#console table
-{
-	white-space:nowrap;
+#console table {
+    white-space: nowrap;
 }
 
-#console table tr
-{
+#console table tr {
     vertical-align: top;
 
 }
 
-#console table td
-{
+#console table td {
     padding: 3px;
 }
 
-#console .check
-{
-	
+#console .check {}
+
+.button {
+    display: inline-block;
+    width: 65px;
+    height: 30px;
 }
 
-.button
-{
-	display:inline-block;
-	width: 65px;
-	height: 30px;
+.buttonHide {
+    background-image: url('refresh.svg');
+    background-size: 30px 40px;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
-.buttonHide
-{
-	background-image:url('refresh.svg');
-	background-size:     30px 40px;
-    background-repeat:   no-repeat;
-    background-position: center center; 
+.buttonLarger {
+    background-image: url('plus.svg');
+    background-size: 30px 40px;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
-.buttonLarger
-{
-	background-image:url('plus.svg');
-	background-size:     30px 40px;
-    background-repeat:   no-repeat;
-    background-position: center center; 
+.buttonSmaller {
+    background-image: url('minus.svg');
+    background-size: 30px 40px;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
-.buttonSmaller
-{
-	background-image:url('minus.svg');
-	background-size:     30px 40px;
-    background-repeat:   no-repeat;
-    background-position: center center; 
+.buttonHelp {
+    background-image: url('help.svg');
 }
 
-.buttonHelp
-{
-	background-image:url('help.svg');
+.mirror {
+    -moz-transform: scaleX(-1);
+    /* Gecko */
+    -o-transform: scaleX(-1);
+    /* Operah */
+    -webkit-transform: scaleX(-1);
+    /* webkit */
+    transform: scaleX(-1);
+    /* standard */
+    filter: FlipH;
+    /* IE 6/7/8 */
 }
 
-.mirror 
-{
-  -moz-transform: scaleX(-1);    /* Gecko */
-  -o-transform: scaleX(-1);      /* Operah */
-  -webkit-transform: scaleX(-1); /* webkit */
-  transform: scaleX(-1);         /* standard */
-  filter: FlipH;                 /* IE 6/7/8 */
+#displayFrame {
+    background-color: #ffffff;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    /*display:table;*/
+    line-height: 0;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
 }
 
-#displayFrame
-{
-	background-color: #ffffff;
-	position:relative;	
-	width:100%;
-	height:100%;	
-	/*display:table;*/
-	line-height:0;
-	margin:0;
-	padding:0;
-	overflow:hidden;
-	
-	 -moz-user-select: none; 
-        -khtml-user-select: none; 
-        -webkit-user-select: none; 
-        -o-user-select: none; 
+.chart {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    /*overflow:hidden;*/
 }
 
-.chart
-{
-	width:100%;
-	text-align:center;
-	position:absolute;
-	/*overflow:hidden;*/
+.chart .row {
+    position: relative;
+    line-height: 0;
+    white-space: nowrap;
+
+
 }
 
-.chart .row
-{
-	position:relative;
-	line-height:0;
-	white-space:nowrap;
-	
-	
-}
-
-.letters
-{
-	display: block;
-	position: relative;	
+.letters {
+    display: block;
+    position: relative;
 }
 
 
 
-.crowdBars
-{
-	position:absolute;
-	display:inline;
-	margin-left:auto;
-	margin-right:auto;
-	left:0;
-	right:0;
-	
+.crowdBars {
+    position: absolute;
+    display: inline;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+
 }
 
-.crowdBar
-{
-	position:absolute;
-	background-color:black;
+.crowdBar {
+    position: absolute;
+    background-color: black;
 }
 
 h2 {
-	
-white-space:nowrap;
+
+    white-space: nowrap;
 }
 
-.chart span
-{
-	position:relative;
-	overflow: visible;
+.chart span {
+    position: relative;
+    overflow: visible;
 }
 
-.chart .scale
-{
-	/*float:right;*/
-	/*margin-right:1em;*/
-	/*position:absolute;*/
-	position:relative;
-	/*right:5px;*/
-	right:-25%;
-	margin-right:5%;
-	bottom:5px;
-	font-size: 0.75em;
-	opacity:1;
+.chart .scale {
+    /*float:right;*/
+    /*margin-right:1em;*/
+    /*position:absolute;*/
+    position: relative;
+    /*right:5px;*/
+    right: -25%;
+    margin-right: 5%;
+    bottom: 5px;
+    font-size: 0.75em;
+    opacity: 1;
 }
 
-.cog
-{
-	position:absolute;
-	bottom: 53px;
-	z-index: 2;
-	width:30px;
-	height:30px;
-	filter: invert(0.5) sepia(1) saturate(5) hue-rotate(175deg);
+.cog {
+    position: absolute;
+    bottom: 53px;
+    z-index: 2;
+    width: 30px;
+    height: 30px;
+    filter: invert(0.5) sepia(1) saturate(5) hue-rotate(175deg);
 }
 
-.logo
-{
-	/*position:absolute;
-	right:1em;
-	top:1em;*/
-	/*float:right;*/
+.logo {
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    float: right;
 }
 
+#auth {
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    float: right;
+}
