--- a/thiluc/style/style.css
+++ b/thiluc/style/style.css
@@ -188,6 +188,20 @@ h2 {
     float: right;
 }
 
+.circle {
+  width: 40px;
+  height: 40px;
+  background: linear-gradient(to top left, #f8f8e5, #fbfa14);
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -20px 0 0 -20px;
+  pointer-events: none;
+  mix-blend-mode: multiply;
+  z-index: 10;
+}
+
 #auth {
     position: absolute;
     right: 1em;
